code: change swagger defaults
